# Redix

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile.dev  Dockerfile.prod  Readme.md
.github/workflows/: cd.yml  ci.yml  release.yml
docs/: architechture.md
scripts/: coverage.sh  run_sanitizer.sh
